--- a/.github/workflows/flakehub-publish-tagged.yml
+++ b/.github/workflows/flakehub-publish-tagged.yml
@@ -19,10 +19,13 @@ jobs:
       - uses: "actions/checkout@v4"
         with:
           ref: "${{ (inputs.tag != null) && format('refs/tags/{0}', inputs.tag) || '' }}"
+          fetch-depth: 0
       - uses: "DeterminateSystems/nix-installer-action@main"
+      - name: Check Nix flake
+        run: nix flake check
       - uses: "DeterminateSystems/flakehub-push@main"
         with:
           visibility: "public"
           name: "aloshy-ai/nix"
-          tag: "${{ inputs.tag }}"
+          tag: "${{ inputs.tag || github.ref_name }}"
           include-output-paths: true
