--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,17 +1,66 @@
-name: Test Install
+name: Test Build
 
-on: [push]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
- test-darwin:
-   runs-on: macos-latest
-   timeout-minutes: 15
-   steps:
-     - name: Checkout repository
-       uses: actions/checkout@v4
+  test-nixos:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Maximize build space
+        uses: AdityaGarg8/remove-unwanted-software@v4
+        with:
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+          remove-large-packages: 'true'
+          remove-cached-tools: 'true'
 
-     - name: Set up GitHub Token
-       run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+      - uses: actions/checkout@v4
 
-     - name: Run install script
-       run: curl -fsSL https://darwin.aloshy.ai | bash
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+          extra_nix_config: |
+            experimental-features = nix-command flakes
+            extra-platforms = aarch64-linux
+            trusted-users = root runner
+
+      - name: Build
+        run: |
+          nix build .#nixosConfigurations.ethernix.config.system.build.toplevel \
+            --impure \
+            --option sandbox false \
+            --option extra-platforms aarch64-linux \
+            --option system-features kvm
+
+  test-darwin:
+    runs-on: macos-latest
+    timeout-minutes: 15
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up GitHub Token
+        run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+
+      - name: Run install script
+        run: curl -fsSL https://darwin.aloshy.ai | bash
