Update VSCode configuration and add new apps and fonts
- Modify VSCode extensions to include more development and theme-related extensions
- Update VSCode settings with new font, font size, and color customizations
- Add Claude and ChatGPT to Homebrew applications
- Include JetBrainsMono Nerd Font in Home Manager packages

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,12 @@
     "recommendations": [
         "tal7aouy.theme",
         "tal7aouy.rainbow-bracket",
-        "pkief.material-icon-theme"
+        "chadalen.vscode-jetbrains-icon-theme",
+        "septwong.vscode-webstorm-theme",
+        "bbenoist.nix",
+        "ms-vscode.vscode-typescript-next",
+        "vercel.turbo-vsc",
+        "extensionnextjs.toolgencode",
+        "zernonia.supabase-vscode",
     ]
 }
