Enhance VSCode configuration in Home Manager
- Update VSCode extensions in extensions.json
- Modify VSCode settings.json with additional formatting and theme settings
- Integrate VSCode configuration directly into home-manager/home.nix
- Add Prettier, GitHub extensions, and semantic highlighting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,5 +9,13 @@
         "vercel.turbo-vsc",
         "extensionnextjs.toolgencode",
         "zernonia.supabase-vscode",
+        "github.vscode-github-actions",
+        "github.remotehub",
+        "github.copilot",
+        "github.copilot-chat",
+        "github.codespaces",
+        "github.github-vscode-theme",
+        "github.vscode-pull-request-github",
+        "esbenp.prettier-vscode"
     ]
 }
