--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,4 +63,4 @@ jobs:
         run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
 
       - name: Run install script
-        run: curl -fsSL https://darwin.aloshy.ai | bash
+        run: scripts/darwin.sh
