Update VS Code settings and Darwin installation script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,23 @@
 {
-  "window.zoomLevel": 1,
-  "editor.fontSize": 13,
+  "editor.fontSize": 14,
   "editor.tabSize": 4,
-  "editor.fontFamily": "'JetBrainsMono Nerd Font'",
+  "editor.fontFamily": "'FiraCode Nerd Font'",
   "editor.folding": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.lineHeight": 22,
-  "editor.fontWeight": "500",
+  "editor.lineHeight": 20,
+  "editor.fontWeight": "400",
   "editor.semanticHighlighting.enabled": true,
   "editor.formatOnSave": true,
   "files.autoSave": "afterDelay",
   "cursor.aipreview.enabled": true,
   "cursor.cmdk.useThemedDiffBackground": true,
   "cursor.cpp.enablePartialAccepts": true,
-  "terminal.integrated.fontSize": 14,
+  "terminal.integrated.fontSize": 12,
   "RainbowBrackets.depreciation-notice": false,
   "RainbowBrackets.colorMode": "Consecutive",
   "breadcrumbs.enabled": false,
   "workbench.tree.enableStickyScroll": false,
-  "workbench.tree.indent": 14,
+  "workbench.tree.indent": 12,
   "workbench.tree.renderIndentGuides": "always",
   "workbench.sideBar.location": "left",
   "workbench.colorCustomizations": {
