--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,6 +56,8 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 15
     steps:
+      - uses: actions/checkout@v4
+      
       - name: Set up GitHub Token
         run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
 
